add a further reading section

--- a/bib.bib
+++ b/bib.bib
@@ -436,3 +436,236 @@
 	year = {1927},
 	note = {OCLC: 870863363}
 }
+
+@book{kirschenbaum_mechanisms_2008,
+	address = {Cambridge, Mass.},
+	title = {Mechanisms: new media and the forensic imagination},
+	isbn = {978-0-262-11311-3 978-0-262-51740-9},
+	shorttitle = {Mechanisms},
+	abstract = {Kirschenbaum examines new media and electronic writing against the textual and technological primitives that govern writing, inscription, and textual transmission in all media: erasure, variability, repeatability, and survivability.},
+	language = {English},
+	publisher = {MIT Press},
+	author = {Kirschenbaum, Matthew G},
+	year = {2008},
+	note = {OCLC: 79256819}
+}
+
+@book{gitelman_paper_2014,
+	address = {Durham; London},
+	title = {Paper knowledge: toward a media history of documents},
+	isbn = {978-0-8223-5645-5 978-0-8223-5657-8},
+	shorttitle = {Paper knowledge},
+	abstract = {Paper Knowledge is a remarkable book about the mundane: the library card, the promissory note, the movie ticket, the PDF (Portable Document Format). It is a media history of the document. Drawing examples from the 1870s, the 1930s, the 1960s, and today, Lisa Gitelman thinks across the media that the document form has come to inhabit over the last 150 years, including letterpress printing, typing and carbon paper, mimeograph, microfilm, offset printing, photocopying, and scanning. Whether examining late nineteenth century commercial, or "job" printing, or the Xerox machine and the role of reproduction in our understanding of the document, Gitelman reveals a keen eye for vernacular uses of technology. She tells nuanced, anecdote-filled stories of the waning of old technologies and the emergence of new. Along the way, she discusses documentary matters such as the relation between twentieth-century technological innovation and the management of paper, and the interdependence of computer programming and documentation. Paper Knowledge is destined to set a new agenda for media studies.},
+	language = {English},
+	publisher = {Duke University Press ;},
+	author = {Gitelman, Lisa},
+	year = {2014},
+	note = {OCLC: 900914774}
+}
+
+@book{vismann_files_2008,
+	address = {Stanford, Calif},
+	title = {Files: {Law} and {Media} {Technology}},
+	isbn = {978-0-8047-5151-3},
+	shorttitle = {Files},
+	abstract = {Quod non est in actis, non est in mundo. (What is not on file is not in the world.) Once files are reduced to the status of stylized icons on computer screens, the reign of paper files appears to be over. With the epoch of files coming to an end, we are free to examine its fundamental influence on Western institutions. From a media-theoretical point of view, subject, state, and law reveal themselves to be effects of specific record-keeping and filing practices. Files are not simply administrative tools; they mediate and process legal systems. The genealogy of the law described in Vismann's Files ranges from the work of the Roman magistrates to the concern over one's own file, as expressed in the context of the files kept by the East German State Security. The book concludes with a look at the computer architecture in which all the stacks, files, and registers that had already created order in medieval and early modern administrations make their reappearance.},
+	language = {English},
+	publisher = {Stanford University Press},
+	author = {Vismann, Cornelia},
+	translator = {Winthrop-Young, Geoffrey},
+	month = apr,
+	year = {2008}
+}
+
+@book{peters_marvelous_2016,
+	address = {Chicago London},
+	edition = {Reprint edition},
+	title = {The {Marvelous} {Clouds}: {Toward} a {Philosophy} of {Elemental} {Media}},
+	isbn = {978-0-226-42135-3},
+	shorttitle = {The {Marvelous} {Clouds}},
+	abstract = {When we speak of clouds these days, it is as likely that we mean data clouds or network clouds as cumulus or stratus. In their sharing of the term, both kinds of clouds reveal an essential truth: that the natural world and the technological world are not so distinct. In The Marvelous Clouds, John Durham Peters argues that though we often think of media as environments, the reverse is just as true—environments are media.  Peters defines media expansively as elements that compose the human world. Drawing from ideas implicit in media philosophy, Peters argues that media are more than carriers of messages: they are the very infrastructures combining nature and culture that allow human life to thrive. Through an encyclopedic array of examples from the oceans to the skies, The Marvelous Clouds reveals the long prehistory of so-called new media. Digital media, Peters argues, are an extension of early practices tied to the establishment of civilization such as mastering fire, building calendars, reading the stars, creating language, and establishing religions. New media do not take us into uncharted waters, but rather confront us with the deepest and oldest questions of society and ecology: how to manage the relations people have with themselves, others, and the natural world.  A wide-ranging meditation on the many means we have employed to cope with the struggles of existence—from navigation to farming, meteorology to Google—The Marvelous Clouds shows how media lie at the very heart of our interactions with the world around us. Peters’s book will not only change how we think about media but provide a new appreciation for the day-to-day foundations of life on earth that we so often take for granted.},
+	language = {English},
+	publisher = {University of Chicago Press},
+	author = {Peters, John Durham},
+	month = aug,
+	year = {2016}
+}
+
+@book{mattern_code_2017,
+	address = {Minneapolis ; London},
+	edition = {1 edition},
+	title = {Code and {Clay}, {Data} and {Dirt}: {Five} {Thousand} {Years} of {Urban} {Media}},
+	isbn = {978-1-5179-0244-5},
+	shorttitle = {Code and {Clay}, {Data} and {Dirt}},
+	abstract = {For years, pundits have trumpeted the earthshattering changes that big data and smart networks will soon bring to our cities. But what if cities have long been built for intelligence, maybe for millennia? In Code and Clay, Data and Dirt Shannon Mattern advances the provocative argument that our urban spaces have been “smart” and mediated for thousands of years.Offering powerful new ways of thinking about our cities, Code and Clay, Data and Dirt goes far beyond the standard historical concepts of origins, development, revolutions, and the accomplishments of an elite few. Mattern shows that in their architecture, laws, street layouts, and civic knowledge—and through technologies including the telephone, telegraph, radio, printing, writing, and even the human voice—cities have long negotiated a rich exchange between analog and digital, code and clay, data and dirt, ether and ore. Mattern’s vivid prose takes readers through a historically and geographically broad range of stories, scenes, and locations, synthesizing a new narrative for our urban spaces. Taking media archaeology to the city’s streets, Code and Clay, Data and Dirt reveals new ways to write our urban, media, and cultural histories.},
+	language = {English},
+	publisher = {Univ Of Minnesota Press},
+	author = {Mattern, Shannon},
+	month = nov,
+	year = {2017}
+}
+
+@book{noble_algorithms_2018,
+	address = {New York},
+	edition = {1 edition},
+	title = {Algorithms of {Oppression}: {How} {Search} {Engines} {Reinforce} {Racism}},
+	isbn = {978-1-4798-3724-3},
+	shorttitle = {Algorithms of {Oppression}},
+	abstract = {A revealing look at how negative biases against women of color are embedded in search engine results and algorithms Run a Google search for “black girls”—what will you find? “Big Booty” and other sexually explicit terms are likely to come up as top search terms. But, if you type in “white girls,” the results are radically different. The suggested porn sites and un-moderated discussions about “why black women are so sassy” or “why black women are so angry” presents a disturbing portrait of black womanhood in modern society. In Algorithms of Oppression, Safiya Umoja Noble challenges the idea that search engines like Google offer an equal playing field for all forms of ideas, identities, and activities. Data discrimination is a real social problem; Noble argues that the combination of private interests in promoting certain sites, along with the monopoly status of a relatively small number of Internet search engines, leads to a biased set of search algorithms that privilege whiteness and discriminate against people of color, specifically women of color. Through an analysis of textual and media searches as well as extensive research on paid online advertising, Noble exposes a culture of racism and sexism in the way discoverability is created online. As search engines and their related companies grow in importance—operating as a source for email, a major vehicle for primary and secondary school learning, and beyond—understanding and reversing these disquieting trends and discriminatory practices is of utmost importance. An original, surprising and, at times, disturbing account of bias on the internet, Algorithms of Oppression contributes to our understanding of how racism is created, maintained, and disseminated in the 21st century.},
+	language = {English},
+	publisher = {NYU Press},
+	author = {Noble, Safiya Umoja},
+	month = feb,
+	year = {2018}
+}
+
+@book{starosielski_undersea_2015,
+	address = {Durham},
+	title = {The {Undersea} {Network}},
+	isbn = {978-0-8223-5755-1},
+	abstract = {In our "wireless" world it is easy to take the importance of the undersea cable systems for granted, but the stakes of their successful operation are huge, as they are responsible for carrying almost all transoceanic Internet traffic. In The Undersea Network Nicole Starosielski follows these cables from the ocean depths to their landing zones on the sandy beaches of the South Pacific, bringing them to the surface of media scholarship and making visible the materiality of the wired network. In doing so, she charts the cable network's cultural, historical, geographic and environmental dimensions. Starosielski argues that the environments the cables occupy are historical and political realms, where the network and the connections it enables are made possible by the deliberate negotiation and manipulation of technology, culture, politics and geography. Accompanying the book is an interactive digital mapping project, where readers can trace cable routes, view photographs and archival materials, and read stories about the island cable hubs.},
+	language = {English},
+	publisher = {Duke University Press Books},
+	author = {Starosielski, Nicole},
+	month = apr,
+	year = {2015}
+}
+
+@book{hu_prehistory_2016,
+	address = {Cambridge, Massachusetts},
+	edition = {Reprint edition},
+	title = {A {Prehistory} of the {Cloud}},
+	isbn = {978-0-262-52996-9},
+	abstract = {The militarized legacy of the digital cloud: how the cloud grew out of older network technologies and politics.We may imagine the digital cloud as placeless, mute, ethereal, and unmediated. Yet the reality of the cloud is embodied in thousands of massive data centers, any one of which can use as much electricity as a midsized town. Even all these data centers are only one small part of the cloud. Behind that cloud-shaped icon on our screens is a whole universe of technologies and cultural norms, all working to keep us from noticing their existence. In this book, Tung-Hui Hu examines the gap between the real and the virtual in our understanding of the cloud. Hu shows that the cloud grew out of such older networks as railroad tracks, sewer lines, and television circuits. He describes key moments in the prehistory of the cloud, from the game “Spacewar” as exemplar of time-sharing computers to Cold War bunkers that were later reused as data centers. Countering the popular perception of a new “cloudlike” political power that is dispersed and immaterial, Hu argues that the cloud grafts digital technologies onto older ways of exerting power over a population. But because we invest the cloud with cultural fantasies about security and participation, we fail to recognize its militarized origins and ideology. Moving between the materiality of the technology itself and its cultural rhetoric, Hu's account offers a set of new tools for rethinking the contemporary digital environment.},
+	language = {English},
+	publisher = {MIT Press},
+	author = {Hu, Tung-Hui},
+	month = sep,
+	year = {2016}
+}
+
+@book{galloway_interface_2012,
+	address = {Cambridge, UK ; Malden, MA},
+	edition = {1 edition},
+	title = {The {Interface} {Effect}},
+	isbn = {978-0-7456-6253-4},
+	abstract = {Interfaces are back, or perhaps they never left. The familiar Socratic conceit from the Phaedrus, of communication as the process of writing directly on the soul of the other, has returned to center stage in today's discussions of culture and media. Indeed Western thought has long construed media as a grand choice between two kinds of interfaces. Following the optimistic path, media seamlessly interface self and other in a transparent and immediate connection. But, following the pessimistic path, media are the obstacles to direct communion, disintegrating self and other into misunderstanding and contradiction. In other words, media interfaces are either clear or complicated, either beautiful or deceptive, either already known or endlessly interpretable. Recognizing the limits of either path, Galloway charts an alternative course by considering the interface as an autonomous zone of aesthetic activity, guided by its own logic and its own ends: the interface effect. Rather than praising user-friendly interfaces that work well, or castigating those that work poorly, this book considers the unworkable nature of all interfaces, from windows and doors to screens and keyboards. Considered allegorically, such thresholds do not so much tell the story of their own operations but beckon outward into the realm of social and political life, and in so doing ask a question to which the political interpretation of interfaces is the only coherent answer. Grounded in philosophy and cultural theory and driven by close readings of video games, software, television, painting, and other images, Galloway seeks to explain the logic of digital culture through an analysis of its most emblematic and ubiquitous manifestation –  the interface.},
+	language = {English},
+	publisher = {Polity},
+	author = {Galloway, Alexander R.},
+	month = oct,
+	year = {2012}
+}
+
+@book{hayles_how_2012,
+	address = {Chicago ; London},
+	title = {How {We} {Think}: {Digital} {Media} and {Contemporary} {Technogenesis}},
+	isbn = {978-0-226-32140-0},
+	shorttitle = {How {We} {Think}},
+	abstract = {“How do we think?” N. Katherine Hayles poses this question at the beginning of this bracing exploration of the idea that we think through, with, and alongside media. As the age of print passes and new technologies appear every day, this proposition has become far more complicated, particularly for the traditionally print-based disciplines in the humanities and qualitative social sciences. With a rift growing between digital scholarship and its print-based counterpart, Hayles argues for contemporary technogenesis—the belief that humans and technics are coevolving—and advocates for what she calls comparative media studies, a new approach to locating digital work within print traditions and vice versa.Hayles examines the evolution of the field from the traditional humanities and how the digital humanities are changing academic scholarship, research, teaching, and publication. She goes on to depict the neurological consequences of working in digital media, where skimming and scanning, or “hyper reading,” and analysis through machine algorithms are forms of reading as valid as close reading once was. Hayles contends that we must recognize all three types of reading and understand the limitations and possibilities of each. In addition to illustrating what a comparative media perspective entails, Hayles explores the technogenesis spiral in its full complexity. She considers the effects of early databases such as telegraph code books and confronts our changing perceptions of time and space in the digital age, illustrating this through three innovative digital productions—Steve Tomasula’s electronic novel, TOC; Steven Hall’s The Raw Shark Texts; and Mark Z. Danielewski’s Only Revolutions. Deepening our understanding of the extraordinary transformative powers digital technologies have placed in the hands of humanists, How We Think presents a cogent rationale for tackling the challenges facing the humanities today.},
+	language = {English},
+	publisher = {University of Chicago Press},
+	author = {Hayles, N. Katherine},
+	month = jun,
+	year = {2012}
+}
+
+@book{dunbar-hester_low_2014,
+	address = {Cambridge, Massachusetts},
+	title = {Low {Power} to the {People}: {Pirates}, {Protest}, and {Politics} in {FM} {Radio} {Activism}},
+	isbn = {978-0-262-02812-7},
+	shorttitle = {Low {Power} to the {People}},
+	abstract = {An examination of how activists combine political advocacy and technical practice in their promotion of the emancipatory potential of local low-power FM radio.The United States ushered in a new era of small-scale broadcasting in 2000 when it began issuing low-power FM (LPFM) licenses for noncommercial radio stations around the country. Over the next decade, several hundred of these newly created low-wattage stations took to the airwaves. In Low Power to the People, Christina Dunbar-Hester describes the practices of an activist organization focused on LPFM during this era. Despite its origins as a pirate broadcasting collective, the group eventually shifted toward building and expanding regulatory access to new, licensed stations. These radio activists consciously cast radio as an alternative to digital utopianism, promoting an understanding of electronic media that emphasizes the local community rather than a global audience of Internet users.Dunbar-Hester focuses on how these radio activists impute emancipatory politics to the “old” medium of radio technology by promoting the idea that “microradio” broadcasting holds the potential to empower ordinary people at the local community level. The group's methods combine political advocacy with a rare commitment to hands-on technical work with radio hardware, although the activists' hands-on, inclusive ethos was hampered by persistent issues of race, class, and gender.Dunbar-Hester's study of activism around an “old” medium offers broader lessons about how political beliefs are expressed through engagement with specific technologies. It also offers insight into contemporary issues in media policy that is particularly timely as the FCC issues a new round of LPFM licenses.},
+	language = {English},
+	publisher = {The MIT Press},
+	author = {Dunbar-Hester, Christina},
+	month = nov,
+	year = {2014}
+}
+
+@book{chun_updating_2017,
+	address = {Cambridge, Massachusetts London, England},
+	edition = {Reprint edition},
+	title = {Updating to {Remain} the {Same}},
+	isbn = {978-0-262-53472-7},
+	abstract = {What it means when media moves from the new to the habitual―when our bodies become archives of supposedly obsolescent media, streaming, updating, sharing, saving. New media―we are told―exist at the bleeding edge of obsolescence. We thus forever try to catch up, updating to remain the same. Meanwhile, analytic, creative, and commercial efforts focus exclusively on the next big thing: figuring out what will spread and who will spread it the fastest. But what do we miss in this constant push to the future? In Updating to Remain the Same, Wendy Hui Kyong Chun suggests another approach, arguing that our media matter most when they seem not to matter at all―when they have moved from “new” to habitual. Smart phones, for example, no longer amaze, but they increasingly structure and monitor our lives. Through habits, Chun says, new media become embedded in our lives―indeed, we become our machines: we stream, update, capture, upload, link, save, trash, and troll.Chun links habits to the rise of networks as the defining concept of our era. Networks have been central to the emergence of neoliberalism, replacing “society” with groupings of individuals and connectable “YOUS.” (For isn't “new media” actually “NYOU media”?) Habit is central to the inversion of privacy and publicity that drives neoliberalism and networks. Why do we view our networked devices as “personal” when they are so chatty and promiscuous? What would happen, Chun asks, if, rather than pushing for privacy that is no privacy, we demanded public rights―the right to be exposed, to take risks and to be in public and not be attacked?},
+	language = {English},
+	publisher = {MIT Press},
+	author = {Chun, Wendy Hui Kyong},
+	month = aug,
+	year = {2017}
+}
+
+@book{jagoda_network_2016,
+	address = {Chicago ; London},
+	edition = {1 edition},
+	title = {Network {Aesthetics}},
+	isbn = {978-0-226-34651-9},
+	abstract = {The term “network” is now applied to everything from the Internet to terrorist-cell systems. But the word’s ubiquity has also made it a cliché, a concept at once recognizable yet hard to explain. Network Aesthetics, in exploring how popular culture mediates our experience with interconnected life, reveals the network’s role as a way for people to construct and manage their world—and their view of themselves.  Each chapter considers how popular media and artistic forms make sense of decentralized network metaphors and infrastructures. Patrick Jagoda first examines narratives from the 1990s and 2000s, including the novel Underworld, the film Syriana, and the television series The Wire, all of which play with network forms to promote reflection on domestic crisis and imperial decline in contemporary America. Jagoda then looks at digital media that are interactive, nonlinear, and dependent on connected audiences to show how recent approaches, such as those in the videogame Journey, open up space for participatory and improvisational thought.  Contributing to fields as diverse as literary criticism, digital studies, media theory, and American studies, Network Aesthetics brilliantly demonstrates that, in today’s world, networks are something that can not only be known, but also felt, inhabited, and, crucially, transformed.},
+	language = {English},
+	publisher = {University of Chicago Press},
+	author = {Jagoda, Patrick},
+	month = mar,
+	year = {2016}
+}
+
+@book{hui_existence_2016,
+	address = {Minneapolis},
+	edition = {1 edition},
+	title = {On the {Existence} of {Digital} {Objects}},
+	isbn = {978-0-8166-9891-2},
+	abstract = {Digital objects, in their simplest form, are data. They are also a new kind of industrial object that pervades every aspect of our life today—as online videos, images, text files, e-mails, blog posts, Facebook events.Yet, despite their ubiquity, the nature of digital objects remains unclear.On the Existence of Digital Objects conducts a philosophical examination of digital objects and their organizing schema by creating a dialogue between Martin Heidegger and Gilbert Simondon, which Yuk Hui contextualizes within the history of computing. How can digital objects be understood according to individualization and individuation? Hui pursues this question through the history of ontology and the study of markup languages and Web ontologies; he investigates the existential structure of digital objects within their systems and milieux. With this relational approach toward digital objects and technical systems, the book addresses alienation, described by Simondon as the consequence of mistakenly viewing technics in opposition to culture.Interdisciplinary in philosophical and technical insights, with close readings of Husserl, Heidegger, and Simondon as well as the history of computing and the Web, Hui’s work develops an original, productive way of thinking about the data and metadata that increasingly define our world.},
+	language = {English},
+	publisher = {Univ Of Minnesota Press},
+	author = {Hui, Yuk},
+	month = feb,
+	year = {2016}
+}
+
+@book{gomez-barris_extractive_2017,
+	address = {Durham ; London},
+	title = {The {Extractive} {Zone}: {Social} {Ecologies} and {Decolonial} {Perspectives}},
+	isbn = {978-0-8223-6897-7},
+	shorttitle = {The {Extractive} {Zone}},
+	abstract = {In The Extractive Zone Macarena Gómez-Barris traces the political, aesthetic, and performative practices that emerge in opposition to the ruinous effects of extractive capital. The work of Indigenous activists, intellectuals, and artists in spaces Gómez-Barris labels extractive zones—majority indigenous regions in South America noted for their biodiversity and long history of exploitative natural resource extraction—resist and refuse the terms of racial capital and the continued legacies of colonialism. Extending decolonial theory with race, sexuality, and critical Indigenous studies, Gómez-Barris develops new vocabularies for alternative forms of social and political life. She shows how from Colombia to southern Chile artists like filmmaker Huichaqueo Perez and visual artist Carolina Caycedo formulate decolonial aesthetics. She also examines the decolonizing politics of a Bolivian anarcho-feminist collective and a coalition in eastern Ecuador that protects the region from oil drilling. In so doing, Gómez-Barris reveals the continued presence of colonial logics and locates emergent modes of living beyond the boundaries of destructive extractive capital.},
+	language = {English},
+	publisher = {Duke University Press Books},
+	author = {Gómez-Barris, Macarena},
+	month = nov,
+	year = {2017}
+}
+
+@book{striphas_late_2011,
+	address = {New York},
+	edition = {Reprint edition},
+	title = {The {Late} {Age} of {Print}: {Everyday} {Book} {Culture} from {Consumerism} to {Control}},
+	isbn = {978-0-231-14815-3},
+	shorttitle = {The {Late} {Age} of {Print}},
+	abstract = {Ted Striphas argues that, although the production and propagation of books have undoubtedly entered a new phase, printed works are still very much a part of our everyday lives. With examples from trade journals, news media, films, advertisements, and a host of other commercial and scholarly materials, Striphas tells a story of modern publishing that proves, even in a rapidly digitizing world, books are anything but dead. From the rise of retail superstores to Oprah's phenomenal reach, Striphas tracks the methods through which the book industry has adapted (or has failed to adapt) to rapid changes in twentieth-century print culture. Barnes \& Noble, Borders, and Amazon.com have established new routes of traffic in and around books, and pop sensations like Harry Potter and the Oprah Book Club have inspired the kind of brand loyalty that could only make advertisers swoon. At the same time, advances in digital technology have presented the book industry with extraordinary threats and unique opportunities. Striphas's provocative analysis offers a counternarrative to those who either triumphantly declare the end of printed books or deeply mourn their passing. With wit and brilliant insight, he isolates the invisible processes through which books have come to mediate our social interactions and influence our habits of consumption, integrating themselves into our routines and intellects like never before.},
+	language = {English},
+	publisher = {Columbia University Press},
+	author = {Striphas, Ted},
+	month = jan,
+	year = {2011}
+}
+
+@book{noauthor_merchants_2012,
+	edition = {2nd Edition edition},
+	title = {Merchants of {Culture}: {The} {Publishing} {Business} in the {Twenty}-{First} {Century} by {John} {B}. {Thompson} (16-{Mar}-2012) {Paperback}},
+	shorttitle = {Merchants of {Culture}},
+	publisher = {Polity Press},
+	month = mar,
+	year = {2012}
+}
+
+@book{flusser_shape_1999,
+	address = {London},
+	title = {The {Shape} of {Things}},
+	isbn = {978-1-86189-055-9},
+	abstract = {This book presents for the first time in English an array of essays on design by the seminal media critic and philosopher Vilém Flusser. It puts forward the view that our future depends on design. In a series of insightful essays on such ordinary "things" as wheels, carpets, pots, umbrellas and tents, Flusser emphasizes the interrelationships between art and science, theology and technology, and archaeology and architecture. Just as formal creativity has produced both weapons of destruction and great works of art, Flusser believed that the shape of things (and the designs behind them) represents both a threat and an opportunity for designers of the future.},
+	language = {English},
+	publisher = {Reaktion Books},
+	author = {Flusser, Vilem and Flusser, Vilém},
+	month = sep,
+	year = {1999}
+}
